[build-system]
requires = ["setuptools >= 62.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_template"
version = "0.0.1"
authors = [{ name = "Author" }, { email = "<author@email.com>" }]
requires-python = ">=3.10"
description = "Description"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
keywords = []
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["project*"]
exclude = ["tests"]


[tool.pyright]
include = "src"
venv = ".venv"
venvPath = "."

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["pytest", "setuptools"]

[tool.black]
line-length = 79
include = '.pyi?%'

[tool.pytest.ini_options]
addopts = "--cov=src"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.pydocstyle]
match = '.*\.py'

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
