[metadata]
name = project
version = 0.1.0
description = description
author = author
license = license
platforms = platform
classifers =
    Programming Language :: Python :: 3

[options]
packages = project
install_requires =
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest==7.1.2
    mypy==0.950
    flake8==4.0.1
    pytest-cov==3.0.0
    tox==3.25.0

[options.package_data]
oli_e = py.typed

[bumpversion]
current_version = 0.1.0
commit = True
tag = True
sign_tag = True

[flake8]
max-line-length = 79
max-complexity = 12
ignore = E501, W503, E203
per-file-ignores = __init__.py:F401

[bumpversion:file:setup.py]


[pydocstyle]
match = .*\.py
